--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
                         aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon icon-menu"></span>
+                        <span class="fas fa-bars fa-lg"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
@@ -104,7 +104,7 @@
                     <div class="col-md-12">
                         <h1>Welcome to
                             <span>NeuralWorks</span>!</h1>
-                        <p>An open source AI research company created to solve problems.</p>
+                        <p>An open source AI research company created to solve problems.</p><br><br><br>
                     </div>
                 </div>
             </div>
