--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon icon-menu"></span>
+              <span class="fas fa-bars fa-lg"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
