--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <!-- Start: .hero-area -->
     <section class="hero-area" id="particles">
-        <div class="hero-area-content">
+        <div class="hero-area-content" id="particle-box">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
