--- a/blogs/00.html
+++ b/blogs/00.html
@@ -122,7 +122,7 @@
       <!-- Ends: .main-menu -->
     </header>
     <!-- Ends: header -->
-
+    <!-- Jude Molloy was here -->
     <!-- Start: .pages-header -->
     <!-- Ends: .pages-header -->
 
@@ -154,7 +154,7 @@
                 </p>
                 <p><b>What are my current views on AI?</b> I am both extremely excited yet extremely scared of AI. I don’t like predicting (ie guessing), as nobody can predict the future and who am I to say what is going to happen, I am just a student with a love for AI, but for this blog I will continue. I think the creation of artificial general intelligence is inevitable and such intelligence will turn into superintelligence. Will it happen at NeuralWorks? Probably not, but I hope so. I feel the organisation that creates superintelligence will have total control of the future of humanity. Do I want that to be NeuralWorks? I am unsure right now. Currently I have little knowledge of AI (relative to my goal) but as my knowledge increases maybe my views will change, I guess we will find out later.</p>
                 <p><b>What do I have in mind for NeuralWorks?</b> Like I said earlier I am initially interested in creating projects such as chess neural networks and relatively simple projects that use to learn different libraries and expand my knowledge. In the future a long term goal is to create projects in fields previously mentioned (neurotechnology, robotics and nanotechnology). Hopefully these will have a real impact on life quality and other things.</p>
-                <p><b>What is the final goal for NeuralWorks?</b> I am unsure if NeuralWorks will have a final goal, but some major milestones would include creating superintelligence (maybe not the first to accomplish this though as described earlier), creating an environment to simulate universes (would probably need superintelligence to help create this) and creating a machine to upload one's consciousness, creating a sense of immortality. Of course these are all extremely long term ideas, but these ideas were what I had in mind when creating NeuralWorks. I Hope we can change humanity for the better, as I believe it is not going in the optimal path, but who am I to say what direction is best, I am just a student.</p>
+                <p><b>What is the final goal for NeuralWorks?</b> I am unsure if NeuralWorks will have a final goal, but some major milestones would include creating superintelligence (maybe not the first to accomplish this though as described earlier), creating an environment to simulate universes (would probably need superintelligence to help create this) and creating a machine to upload one's consciousness, creating a sense of immortality. Of course these are all extremely long term ideas, but these ideas were what I had in mind when creating NeuralWorks. I hope we can change humanity for the better, as I believe it is not going in the optimal path, but who am I to say what direction is best, I am just a student.</p>
                 <p><b>Please reach out to me if you would like to work on a NeuralWorks project!</b></p>
               </div>
             </div>
