--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <div class="flow-single">
                                     <div class="desc">
                                         <h3 class="pcolor">Machine Learning</h3>
-                                        <p>Using multiple modern libraries such as <b>TensorFlow</b>, <b>PyTourch</b> and <b>Sklearn</b> to create new and innovative projects.
+                                        <p>Using multiple modern libraries such as <b>TensorFlow</b>, <b>PyTorch</b> and <b>Sklearn</b> to create new and innovative projects.
                                         </p>
                                     </div>
                                     <div class="divider divider-down">
