--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css" />
     <link rel="stylesheet" href="assets/css/Projects-Clean.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/0e7cbfa068.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body style="max-width: 100vw">
@@ -64,7 +68,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navcol-2">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://github.com/NeuralWorksAI"
+                target="_blank"
+                >Projects</a
+              >
+            </li>
             <li class="nav-item dropdown show">
               <a
                 class="dropdown-toggle nav-link"
@@ -79,6 +90,15 @@
                 ><a class="dropdown-item" href="#">Team</a
                 ><a class="dropdown-item" href="#">FAQ</a>
               </div>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://discord.gg/UQBybs4X8H"
+                target="_blank"
+              >
+                <i class="fab fa-lg fa-discord d-inline-block align-middle"></i>
+              </a>
             </li>
           </ul>
         </div>
@@ -144,7 +164,7 @@
         background-size: cover;
         border-radius: 100%;
         margin-top: 3rem;
-        margin-bottom: 5rem;
+        margin-bottom: 3rem;
       "
     >
       <div class="row">
@@ -164,13 +184,13 @@
         <div class="col">
           <img
             id="custom-image"
-            class="d-flex flex-wrap align-items-center"
+            class="d-flex flex-wrap align-items-center floating"
             src="assets/img/group.svg"
           />
         </div>
       </div>
       <div class="row">
-        <div class="col d-flex flex-wrap align-items-center">
+        <div class="col d-flex flex-wrap align-items-center floating">
           <img id="custom-image" src="assets/img/work.svg" />
         </div>
         <div class="col">
@@ -210,11 +230,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <img
-            id="custom-image"
-            class="d-flex flex-wrap align-items-center"
-            src="assets/img/group.svg"
-          />
+          <img id="custom-image" class="floating" src="assets/img/group.svg" />
         </div>
       </div>
       <div class="row">
@@ -234,7 +250,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <img id="custom-image" src="assets/img/work.svg" />
+          <img id="custom-image" src="assets/img/work.svg" class="floating" />
         </div>
       </div>
     </div>
@@ -247,8 +263,13 @@
         Recent Projects
       </h1>
       <div class="card-group">
-        <div class="card">
-          <img class="card-img-top w-100 d-block" />
+        <div class="card project-card" data-aos="fade-up">
+          <img
+            class="card-img-top w-100 d-block"
+            src="https://media.giphy.com/media/BIQIObEIZv7WkPVqt4/giphy.gif"
+            class="card-img-top"
+            alt="Commit"
+          />
           <div class="card-body">
             <h4 class="card-title">Commit</h4>
             <p class="card-text">
@@ -258,8 +279,13 @@
             <button class="btn btn-primary" type="button">See more</button>
           </div>
         </div>
-        <div class="card">
-          <img class="card-img-top w-100 d-block" />
+        <div class="card project-card" data-aos="fade-up" data-aos-delay="300">
+          <img
+            class="card-img-top w-100 d-block"
+            src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_thumbnail_photos/001/487/158/datas/medium.png"
+            class="card-img-top"
+            alt="Photocrypt"
+          />
           <div class="card-body">
             <h4 class="card-title">Photocrypt</h4>
             <p class="card-text">
@@ -269,8 +295,12 @@
             <button class="btn btn-primary" type="button">See more</button>
           </div>
         </div>
-        <div class="card">
-          <img class="card-img-top w-100 d-block" />
+        <div class="card project-card" data-aos="fade-up" data-aos-delay="600">
+          <img
+            class="card-img-top w-100 d-block"
+            src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/410/418/datas/original.png"
+            alt="Photocrypt"
+          />
           <div class="card-body">
             <h4 class="card-title">Lottocoin</h4>
             <p class="card-text">
@@ -286,7 +316,11 @@
       class="display-5 fw-bold"
       style="text-align: center; padding: 5vh; margin-top: 5rem; font-size: 6vh"
     >
-      Any Questions?<br />&nbsp;<a href="#">Email Us</a>
+      Any Questions?<br />&nbsp;<a
+        href="#"
+        style="text-decoration: none; color: #437085"
+        >Email Us</a
+      >
     </h1>
     <footer class="footer-basic">
       <ul class="list-inline">
