stable 5am push - not good

--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
           class="btn btn-primary btn-lg"
           role="button"
           id="start-button"
-          href="#"
+          href="https://discord.gg/UQBybs4X8H"
           style="font-size: 1rem"
+          target="_blank"
           >Start Here</a
         >
       </div>
@@ -276,7 +277,12 @@
               RU hacks winner. Solving procrastination the right way,
               permanently!
             </p>
-            <button class="btn btn-primary" type="button">See more</button>
+            <a
+              href="https://devpost.com/software/commit-f9nmdz"
+              target="_blank"
+            >
+              <button class="btn btn-primary" type="button">See more</button></a
+            >
           </div>
         </div>
         <div class="card project-card" data-aos="fade-up" data-aos-delay="300">
@@ -292,7 +298,12 @@
               Hack Caltech Winner, 1517 Funding Winner. Secure accounts with
               images, not passwords.
             </p>
-            <button class="btn btn-primary" type="button">See more</button>
+            <a
+              href="https://devpost.com/software/photocrypt-70prqs"
+              target="_blank"
+            >
+              <button class="btn btn-primary" type="button">See more</button>
+            </a>
           </div>
         </div>
         <div class="card project-card" data-aos="fade-up" data-aos-delay="600">
@@ -307,7 +318,12 @@
               A cryptocurrency created to solve the biggest problem in
               FinTech.<br />
             </p>
-            <button class="btn btn-primary" type="button">See more</button>
+            <a
+              href="https://devpost.com/software/lottocoin-5n7fsx"
+              target="_blank"
+            >
+              <button class="btn btn-primary" type="button">See more</button></a
+            >
           </div>
         </div>
       </div>
@@ -317,7 +333,7 @@
       style="text-align: center; padding: 5vh; margin-top: 5rem; font-size: 6vh"
     >
       Any Questions?<br />&nbsp;<a
-        href="#"
+        href="mailto:michaelwbeer@gmail.com"
         style="text-decoration: none; color: #437085"
         >Email Us</a
       >
