5am commit -stable

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             <div class="card-body">
               <h3 class="card-title">Award Winning Projects</h3>
               <p class="card-text">
-                Work with the NeuralWorks team to create new exciting projects.
-                Previous projects have&nbsp;<span
+                Work with the NeuralWorks team to create new and exciting
+                projects. Previous projects have&nbsp;<span
                   >won ivy league hackathons</span
                 >&nbsp;and been funded.
               </p>
