--- a/team.html
+++ b/team.html
@@ -40,6 +40,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="assets/css/styles.min.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/0e7cbfa068.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -99,44 +104,51 @@
         </div>
       </div>
     </nav>
-    <section class="team-clean">
-      <div class="container">
-        <div class="intro">
-          <h2 class="text-center">Meet the team</h2>
-          <p class="text-center">
-            Want to help build NeuralWorks? email me at
-            michael@neuralworks.group.
-          </p>
-        </div>
-        <div class="row people">
-          <div class="col-md-6 col-lg-4 item" style="margin: auto">
-            <img class="rounded-circle" src="assets/img/mesquare.jpeg" />
-            <h3 class="name">Michael Beer</h3>
-            <p class="title">CREATOR</p>
-            <p class="description">
-              Hey, I am an undergraduate student at the University of Edinburgh.
-              I started NeuralWorks to make new friends, simple as that. Well...
-              I also enjoy hackathons and wanted to create one. That's enough
-              about me, I want to hear about you!
+    <div class="main">
+      <section class="team-clean">
+        <div class="container">
+          <div class="intro">
+            <h2 class="text-center">Meet the team</h2>
+            <p class="text-center">
+              Want to help build NeuralWorks? email me at
+              michael@neuralworks.group.
             </p>
-            <div class="social">
-              <a href="#"></a><a href="#"><i class="fa fa-twitter"></i></a
-              ><a href="#"><i class="fa fa-instagram"></i></a>
+          </div>
+          <div class="row people">
+            <div class="col-md-6 col-lg-4 item" style="margin: auto">
+              <img class="rounded-circle" src="assets/img/mesquare.jpeg" />
+              <h3 class="name">Michael Beer</h3>
+              <p class="title">CREATOR</p>
+              <p class="description">
+                Hey, I am an undergraduate student at the University of
+                Edinburgh. I started NeuralWorks to make new friends, simple as
+                that. Well... I also enjoy hackathons and wanted to create one.
+                That's enough about me, I want to hear about you!
+              </p>
+              <div class="social">
+                <a href="https://michaelbeer.me" target="_blank"
+                  ><i class="fas fa-globe"></i></a
+                ><a href="https://github.com/00MB" target="_blank"
+                  ><i class="fab fa-github"></i
+                ></a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <footer class="footer-basic">
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
-        <li class="list-inline-item"><a href="#">Projects</a></li>
-        <li class="list-inline-item"><a href="#">Mission</a></li>
-        <li class="list-inline-item"><a href="#">Team</a></li>
-        <li class="list-inline-item"><a href="#">FAQ</a></li>
-      </ul>
-      <p class="copyright">NeuralWorks © 2020</p>
-    </footer>
+      </section>
+      <footer class="footer-basic">
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="home.html">Home</a></li>
+          <li class="list-inline-item">
+            <a href="https://github.com/NeuralWorksAI">Projects</a>
+          </li>
+          <li class="list-inline-item"><a href="mission.html">Mission</a></li>
+          <li class="list-inline-item"><a href="team.html">Team</a></li>
+          <li class="list-inline-item"><a href="faq.html">FAQ</a></li>
+        </ul>
+        <p class="copyright">NeuralWorks © 2020</p>
+      </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.min.js"></script>
   </body>
