--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
         class="container"
         id="grid-container"
         style="
-          padding-top: 5rem;
+          padding-top: 1rem;
+          padding-bottom: 1rem;
           background-image: url(assets/img/background.jpg);
           background-size: cover;
           border-radius: 100%;
