--- a/mission.html
+++ b/mission.html
@@ -35,12 +35,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lato"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
     <link rel="stylesheet" href="assets/css/styles.min.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <script
       src="https://kit.fontawesome.com/0e7cbfa068.js"
       crossorigin="anonymous"
@@ -86,9 +81,9 @@
                 >About&nbsp;</a
               >
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="mission.html">Mission</a
-                ><a class="dropdown-item active" href="#">Team</a
-                ><a class="dropdown-item" href="faq.html">FAQ</a>
+                <a class="dropdown-item active" href="#">Mission</a
+                ><a class="dropdown-item" href="team.html">Team</a
+                ><a class="dropdown-item" href="#">FAQ</a>
               </div>
             </li>
             <li class="nav-item">
@@ -105,37 +100,56 @@
       </div>
     </nav>
     <div class="main">
-      <section class="team-clean">
-        <div class="container">
-          <div class="intro">
-            <h1 class="text-center" style="padding-top: 1rem">The Team</h1>
-            <p class="text-center">
-              Want to help build NeuralWorks? email me at
-              michael@neuralworks.group.
-            </p>
-          </div>
-          <div class="row people">
-            <div class="col-md-6 col-lg-4 item" style="margin: auto">
-              <img class="rounded-circle" src="assets/img/mesquare.jpeg" />
-              <h3 class="name">Michael Beer</h3>
-              <p class="title">CREATOR</p>
-              <p class="description">
-                Hey, I am an undergraduate student at the University of
-                Edinburgh. I started NeuralWorks to make new friends, simple as
-                that. Well... I also enjoy hackathons and wanted to create one.
-                That's enough about me, I want to hear about you!
-              </p>
-              <div class="social">
-                <a href="https://michaelbeer.me" target="_blank"
-                  ><i class="fas fa-globe"></i></a
-                ><a href="https://github.com/00MB" target="_blank"
-                  ><i class="fab fa-github"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <div
+        class="container-fluid py-5"
+        id="about-container"
+        style="text-align: center"
+      >
+        <h1 class="display-5 fw-bold">The Mission</h1>
+        <p
+          id="about-paragrah"
+          style="
+            max-width: 60%;
+            padding-top: 3rem;
+            padding-bottom: 5rem;
+            margin: auto;
+          "
+        >
+          The mission is simple, to create a better future for humanity by
+          advancing science and technology, especially in the domains of
+          biology, physics and computer science.
+        </p>
+        <h2>Short Term</h2>
+        <p
+          id="about-paragrah-1"
+          style="
+            max-width: 60%;
+            padding-top: 3rem;
+            padding-bottom: 5rem;
+            margin: auto;
+          "
+        >
+          The short term goals revolve around building a community. As this
+          community progresses we will create programs and events such as
+          hackathons, accelerators and special talks.
+        </p>
+        <h2>The Far Future</h2>
+        <p
+          id="about-paragrah-2"
+          style="
+            max-width: 60%;
+            padding-top: 3rem;
+            padding-bottom: 5rem;
+            margin: auto;
+          "
+        >
+          Hopefully in the future the NeuralWorks community will be thousands
+          large and continuing to connect like minded people all while creating
+          new projects and hosting fun events. Like mentioned in the mission,
+          the goal for NeuralWorks is to be at the edge of innovation.
+        </p>
+        <h5>Want to help build NeuralWorks?<br />Email me</h5>
+      </div>
       <footer class="footer-basic">
         <ul class="list-inline">
           <li class="list-inline-item"><a href="home.html">Home</a></li>
