--- a/mission.html
+++ b/mission.html
@@ -36,6 +36,7 @@
       href="https://fonts.googleapis.com/css?family=Lato"
     />
     <link rel="stylesheet" href="assets/css/styles.min.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <script
       src="https://kit.fontawesome.com/0e7cbfa068.js"
       crossorigin="anonymous"
