--- a/mission.html
+++ b/mission.html
@@ -149,7 +149,14 @@
           new projects and hosting fun events. Like mentioned in the mission,
           the goal for NeuralWorks is to be at the edge of innovation.
         </p>
-        <h5>Want to help build NeuralWorks?<br />Email me</h5>
+        <h4>
+          Want to help build NeuralWorks?<br />
+          <a
+            href="mailto:michaelwbeer@gmail.com"
+            style="text-decoration: none; color: #437085"
+            >Email me</a
+          >
+        </h4>
       </div>
       <footer class="footer-basic">
         <ul class="list-inline">
