--- a/team.html
+++ b/team.html
@@ -110,8 +110,12 @@
           <div class="intro">
             <h1 class="text-center" style="padding-top: 1rem">The Team</h1>
             <p class="text-center">
-              Want to help build NeuralWorks? email me at
-              michael@neuralworks.group.
+              Want to help build NeuralWorks?
+              <a
+                href="mailto:michaelwbeer@gmail.com"
+                style="text-decoration: none; color: #437085"
+                >Email me</a
+              >
             </p>
           </div>
           <div class="row people">
