--- a/faq.html
+++ b/faq.html
@@ -82,9 +82,9 @@
                 >About&nbsp;</a
               >
               <div class="dropdown-menu">
-                <a class="dropdown-item active" href="#">Mission</a
+                <a class="dropdown-item" href="mission.html">Mission</a
                 ><a class="dropdown-item" href="team.html">Team</a
-                ><a class="dropdown-item" href="faq.html">FAQ</a>
+                ><a class="dropdown-item active" href="#">FAQ</a>
               </div>
             </li>
             <li class="nav-item">
@@ -106,48 +106,56 @@
         id="about-container"
         style="text-align: center"
       >
-        <h1 class="display-5 fw-bold">The Mission</h1>
-        <p
-          id="about-paragrah"
-          style="
-            max-width: 60%;
-            padding-top: 3rem;
-            padding-bottom: 5rem;
-            margin: auto;
-          "
-        >
-          The mission is simple, to create a better future for humanity by
-          advancing science and technology, especially in the domains of
-          biology, physics and computer science.
-        </p>
-        <h2>Short Term</h2>
+        <h1 class="display-5 fw-bold py-5">FAQ</h1>
+        <h3>Is NeuralWorks free?</h3>
         <p
           id="about-paragrah-1"
           style="
             max-width: 60%;
-            padding-top: 3rem;
+            padding-top: 1rem;
             padding-bottom: 5rem;
             margin: auto;
           "
         >
-          The short term goals revolve around building a community. As this
-          community progresses we will create programs and events such as
-          hackathons, accelerators and special talks.
+          Of course! It is a community.
         </p>
-        <h2>The Far Future</h2>
+        <h3>Where is it based?</h3>
         <p
-          id="about-paragrah-2"
+          id="about-paragrah-1"
           style="
             max-width: 60%;
-            padding-top: 3rem;
+            padding-top: 1rem;
             padding-bottom: 5rem;
             margin: auto;
           "
         >
-          Hopefully in the future the NeuralWorks community will be thousands
-          large and continuing to connect like minded people all while creating
-          new projects and hosting fun events. Like mentioned in the mission,
-          the goal for NeuralWorks is to be at the edge of innovation.
+          NeuralWorks is an global community with creators from all over the
+          world.
+        </p>
+        <h3>I am X years old, can I join?</h3>
+        <p
+          id="about-paragrah-1"
+          style="
+            max-width: 60%;
+            padding-top: 1rem;
+            padding-bottom: 5rem;
+            margin: auto;
+          "
+        >
+          Totally, we do not discriminate. As long as you reach the discord
+          requirement of 13.
+        </p>
+        <h3>Do I need to apply?</h3>
+        <p
+          id="about-paragrah-1"
+          style="
+            max-width: 60%;
+            padding-top: 1rem;
+            padding-bottom: 5rem;
+            margin: auto;
+          "
+        >
+          Not for the public server, no.
         </p>
         <h4>
           Want to help build NeuralWorks?<br />
@@ -164,9 +172,9 @@
           <li class="list-inline-item">
             <a href="https://github.com/NeuralWorksAI">Projects</a>
           </li>
-          <li class="list-inline-item"><a href="#">Mission</a></li>
+          <li class="list-inline-item"><a href="mission.html">Mission</a></li>
           <li class="list-inline-item"><a href="team.html">Team</a></li>
-          <li class="list-inline-item"><a href="faq.html">FAQ</a></li>
+          <li class="list-inline-item"><a href="#">FAQ</a></li>
         </ul>
         <p class="copyright">NeuralWorks © 2020</p>
       </footer>
