--- a/team.html
+++ b/team.html
@@ -147,7 +147,7 @@
             <a href="https://github.com/NeuralWorksAI">Projects</a>
           </li>
           <li class="list-inline-item"><a href="mission.html">Mission</a></li>
-          <li class="list-inline-item"><a href="team.html">Team</a></li>
+          <li class="list-inline-item"><a href="#">Team</a></li>
           <li class="list-inline-item"><a href="faq.html">FAQ</a></li>
         </ul>
         <p class="copyright">NeuralWorks © 2020</p>
