--- a/faq.html
+++ b/faq.html
@@ -168,7 +168,7 @@
       </div>
       <footer class="footer-basic">
         <ul class="list-inline">
-          <li class="list-inline-item"><a href="home.html">Home</a></li>
+          <li class="list-inline-item"><a href="index.html">index</a></li>
           <li class="list-inline-item">
             <a href="https://github.com/NeuralWorksAI">Projects</a>
           </li>
