--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       </h1>
       <footer class="footer-basic">
         <ul class="list-inline">
-          <li class="list-inline-item"><a href="#">index</a></li>
+          <li class="list-inline-item"><a href="#">Home</a></li>
           <li class="list-inline-item">
             <a href="https://github.com/NeuralWorksAI">Projects</a>
           </li>
