--- a/mission.html
+++ b/mission.html
@@ -160,7 +160,7 @@
       </div>
       <footer class="footer-basic">
         <ul class="list-inline">
-          <li class="list-inline-item"><a href="index.html">index</a></li>
+          <li class="list-inline-item"><a href="index.html">Home</a></li>
           <li class="list-inline-item">
             <a href="https://github.com/NeuralWorksAI">Projects</a>
           </li>
