--- a/team.html
+++ b/team.html
@@ -142,7 +142,7 @@
       </section>
       <footer class="footer-basic">
         <ul class="list-inline">
-          <li class="list-inline-item"><a href="index.html">index</a></li>
+          <li class="list-inline-item"><a href="index.html">Home</a></li>
           <li class="list-inline-item">
             <a href="https://github.com/NeuralWorksAI">Projects</a>
           </li>
