--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://discord.gg/UQBybs4X8H"
+                href="https://discord.gg/7Kp29uCEde"
                 target="_blank"
               >
                 <i class="fab fa-lg fa-discord d-inline-block align-middle"></i>
@@ -128,7 +128,7 @@
             class="btn btn-primary btn-lg"
             role="button"
             id="start-button"
-            href="https://discord.gg/UQBybs4X8H"
+            href="https://discord.gg/7Kp29uCEde"
             style="font-size: 1rem"
             target="_blank"
             >Start Here</a
