--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
       src="https://kit.fontawesome.com/0e7cbfa068.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-163XJYM4NK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-163XJYM4NK");
+    </script>
   </head>
 
   <body style="max-width: 100vw">
