--- a/team.html
+++ b/team.html
@@ -137,6 +137,24 @@
                 ></a>
               </div>
             </div>
+            <div class="col-md-6 col-lg-4 item" style="margin: auto">
+              <img class="rounded-circle" src="assets/img/job.jpg" />
+              <h3 class="name">Job Madi</h3>
+              <p class="title">CO-CREATOR</p>
+              <p class="description">
+                Hey, I'm an undergrad student at IIE's Varsity college by day
+                and a software engineer intern by <strike>night</strike> day.
+                Meeting new people and coding is my thing. I love hackathons,
+                I'm sure you do too! Join the community, let's connect.
+              </p>
+              <div class="social">
+                <a href="https://www.linkedin.com/in/job-madi/" target="_blank"
+                  ><i class="fas fa-globe"></i></a
+                ><a href="https://github.com/job-madi" target="_blank"
+                  ><i class="fab fa-github"></i
+                ></a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
